# iplotprocessing

./: .gitattributes  .gitignore  MANIFEST.in  README.md  basicProcessing.py  copyright.md.jinja2  data.py  environ.sh  pyproject.toml  requirements.txt  set-version.sh  setup.cfg  setup.py
ci-build/: st00-header.sh  st01-install.sh  st02-test.sh  st03-codecov.sh
docs/: requirements-docs.txt
docs/source/: advanced.rst  basic.rst  conf.py  devnotes.rst  getting-started.rst  index.rst  install.rst  testing.rst  usage.rst
iplotProcessing/: README.md  __init__.py  _version.py  basicProcessing.py  parsers.py
iplotProcessing/common/: __init__.py  errors.py  grid_mixing.py  interpolation.py  parameter_id.py  table_parser.py  time_mixing.py  units.py
iplotProcessing/core/: __init__.py  blueprint.json  bobject.py  context.py  dobject.py  environment.py  pobject.py  processor.py  signal.py  table_description.json
iplotProcessing/example/: __main__.py  emulatedDataAccess.py  example_inp.csv  example_inp_1.csv  example_inp_2.csv  example_inp_3.csv  example_inp_4.csv  example_inp_5.csv  example_inp_6.csv  example_inp_7.csv  example_inp_8.csv  simulatedDataAccess.py
iplotProcessing/math/: __init__.py
iplotProcessing/tests/: test_01_expression_parsing.py  test_02_bobject_0d_buffer.py  test_02_dobject_0d_buffer.py  test_03_bobject_1d_buffer.py  test_03_dobject_1d_buffer.py  test_04_bobject_2d_buffer.py  test_04_dobject_2d_buffer.py  test_05_buffer_object_ufunc.py  test_05_pobject_time.py  test_05_signal_time.py  test_06_signal_ufunc.py  (+30 more)
proc/: basicProcessing.py  data.py
(+31 files in other folders)
